Conflicts resolved
