# app/serializers.py
@@ -3,6 +3,7 @@ from datetime import date
 from django.contrib.auth import authenticate
 from django.contrib.auth.password_validation import validate_password
 from django.db import transaction
+from django.db.models import Q
 from django.shortcuts import get_object_or_404
 from rest_framework import serializers
 from waffle import get_waffle_switch_model
@@ -145,6 +146,8 @@ class AssetSerializer(serializers.ModelSerializer):
 
 
 class EmployeeUserSerializer(serializers.ModelSerializer):
+    email = serializers.EmailField()
+
     class Meta:
         model = models.User
         fields = [
@@ -155,6 +158,21 @@ class EmployeeUserSerializer(serializers.ModelSerializer):
             "contact_number",
             "default_role",
         ]
+
+    def validate_email(self, value):
+        organization = self.context.get("request").user.organization
+
+        if models.Employee.objects.filter(
+            organization=organization, user__email=value
+        ).exists():
+            raise serializers.ValidationError(
+                "employee with this email already exists."
+            )
+        if models.User.objects.filter(
+            ~Q(organization=organization) & Q(email=value)
+        ).exists():
+            raise serializers.ValidationError("user with this email already exists.")
+        return value
 
 
 class EmployeeUpdateUserSerializer(EmployeeUserSerializer):
@@ -195,13 +213,19 @@ class EmployeeSerializer(serializers.ModelSerializer):
         if user_data.get("default_role"):
             user_data["default_role"] = user_data.pop("default_role").id
         organization = self.context.get("request").user.organization
-        user_ser = EmployeeUserSerializer(data=user_data)
+        try:
+            user = models.User.objects.get(email=user_data.get("email"))
+            user_ser = EmployeeUserSerializer(
+                data=user_data, instance=user, context=self.context
+            )
+        except models.User.DoesNotExist:
+            user_ser = EmployeeUserSerializer(data=user_data, context=self.context)
         user_ser.is_valid(raise_exception=True)
-        user = user_ser.save()
-        user.username = user.email
-        user.organization = organization
-        user.is_active = validated_data.get("user_allowed", False)
-        user.save()
+        user = user_ser.save(
+            is_active=validated_data.get("user_allowed", False),
+            username=user_data.get("email"),
+            organization=organization,
+        )
         validated_data["user_id"] = user.id
         employee = super().create(validated_data)
 
@@ -488,6 +512,19 @@ class LeaveSerializer(serializers.ModelSerializer):
         model = models.Leave
         fields = "__all__"
 
+    def to_representation(self, instance):
+        data = super().to_representation(instance)
+        data["employee"] = {
+            "id": instance.employee.id,
+            "name": instance.employee.user.get_full_name(),
+            "image": instance.employee.user.image,
+            "department": instance.employee.department.name
+            if instance.employee.department
+            else None,
+        }
+
+        return data
+
 
 class LeaveUpdateSerializer(serializers.ModelSerializer):
     class Meta:
@@ -501,12 +538,19 @@ class OrganizationSerializer(serializers.ModelSerializer):
         fields = "__all__"
 
 
+class OwnerEmployeeSerializer(serializers.ModelSerializer):
+    class Meta:
+        model = models.Employee
+        fields = ("date_of_joining", "nic")
+
+
 class OwnerOnBoardingSerializer(serializers.ModelSerializer):
     organization = OrganizationSerializer()
+    employee = OwnerEmployeeSerializer(required=False)
 
     class Meta:
         model = models.User
-        fields = ("first_name", "last_name", "email", "organization")
+        fields = ("first_name", "last_name", "email", "organization", "employee")
 
     @transaction.atomic
     def create(self, validated_data):
@@ -535,6 +579,12 @@ class OwnerOnBoardingSerializer(serializers.ModelSerializer):
                 ),
             ]
         )
+        for module in models.Module.objects.filter(is_enabled=True):
+            models.OrganizationModule.objects.create(
+                organization=organization,
+                module=module,
+                is_enabled=True,
+            )
         validated_data["username"] = validated_data.get("email")
         validated_data["organization"] = organization
         validated_data["default_role"] = models.Role.objects.filter(
