# app/views/api.py
@@ -185,6 +185,14 @@ class EmployeeViewSet(mixins.PrivateApiMixin, ModelViewSet, mixins.OrganizationM
             return serializers.EmployeeUpdateSerializer
         return self.serializer_class
 
+    def destroy(self, request, *args, **kwargs):
+        if models.Employee.objects.get(id=kwargs.get("pk")).user == self.request.user:
+            return Response(
+                {"detail": "Can not delete self employee"},
+                status=status.HTTP_400_BAD_REQUEST,
+            )
+        return super().destroy(request, *args, **kwargs)
+
     @transaction.atomic
     def perform_destroy(self, instance):
         user = get_object_or_404(models.User, employee=instance)
